Fix results header vertical spacing

--- a/source/stylesheets/layout/_search.scss
+++ b/source/stylesheets/layout/_search.scss
@@ -135,7 +135,7 @@ $time-width: 6rem;
 .search__results h2 {
   @extend %h1;
 
-  margin-bottom: $leading * 1rem;
+  margin-bottom: 0;
 
   color: text-contrast(palette('white'), palette('petrol'));
 }
